--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -2,11 +2,15 @@
   --background: #f8f9fa;
   --primary-red: #E75561;
   --secondary-red: #dd424f;
+  --light-pink: #E2B4BD;
   --light-cream: #f7f9fc;
   --light-blue: #C4EEEF;
+  --medium-pink: #9B6A6C;
   --medium-blue: #71a6c8;
   --medium-blue-2: #377195;
   --dark-blue: #203656;
+  --light-green: #E6F91F;
+  --medium-green: #8BBEB2;
   --grey: #FFFFFF26;
   --warning-bg: #fff3cd;
 }
